[metadata]
name = ipynbviewer-peco
version = 1.0
url = https://github.com/PaulEcoffet/ipynbviewer
author = Paul ecoffet
author_email = ecoffet.paul@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = output human readable ipynb for the terminal
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =
    timg
    pygments
    markdownify

[options.entry_points]
console_scripts =
    ipynbviewer = ipynbviewer.ipynbview:main

[options.packages.find]
where = src
